[project]
name = "axpy_jax"
description = "A simple demonstration of how you can extend JAX with custom C++ and CUDA ops"
authors = [{ name = "SCU-master", email = "floyd_kuscal@163.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["jax>=0.4.16", "jaxlib>=0.4.16"]
dynamic = ["version"]

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/axpy_jax_version.py"]
wheel.install-dir = "axpy_jax"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
write_to = "src/kepler_jax_version.py"
